--- a/HTML/EditProfile.html
+++ b/HTML/EditProfile.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="CSS/EditProfile.css">
-    <script src="js/home.js"></script>
+
 </head>
 
 <body>
@@ -24,8 +24,7 @@
 
     <!-- modal for change password -->
 
-    <!-- Modal -->
-    <div class="modal " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal " id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -33,16 +32,63 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body ">
-                    <input type="password" name="oldpass" class="form-control my-3" id="oldpass" aria-describedby="emailHelp"
-                        placeholder="Enter old password">
-                    <input type="password" name="newpass" class="form-control my-3" id="newpass" aria-describedby="emailHelp"
-                        placeholder="Enter new password">
-                    <input type="password" name="confpass" class="form-control my-3" id="confpass" aria-describedby="emailHelp"
-                        placeholder="Confirm new password">
+                    <input type="password" name="oldpass" class="form-control my-3" id="oldpass"
+                        aria-describedby="emailHelp" placeholder="Enter old password">
+                    <input type="password" name="newpass" class="form-control my-3" id="newpass"
+                        aria-describedby="emailHelp" placeholder="Enter new password">
+                    <input type="password" name="confpass" class="form-control my-3" id="confpass"
+                        aria-describedby="emailHelp" placeholder="Confirm new password">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn cancel" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn changepass">Change password</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- modal for add skills -->
+
+    <div class="modal " id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add your skills</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body ">
+                    <div class="approveTermsContainer">
+                        <div class="newItems">
+                            <br />
+                            <select multiple="multiple" id='lstBox1'>
+                                <option value="Anthropology">Anthropology</option>
+                                <option value="Archeology">Archeology</option>
+                                <option value="Astronomy">Astronomy</option>
+                                <option value="Computer Science">Computer Science</option>
+                                <option value="Environmental Science">Environmental Science</option>
+                                <option value="History">History</option>
+                                <option value="IT">IT</option>
+                                <option value="EC">EC</option>
+                                <option value="EE">EE</option>
+
+                            </select>
+                        </div>
+                        <div class="transferBtns">
+                            <input type='button' id='btnRight' value='  >  ' />
+                            <br /><input type='button' id='btnLeft' value='  <  ' />
+                        </div>
+                        <div class="approvedItems">
+                            <br />
+                            <select multiple="multiple" id='lstBox2'>
+                            </select>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer justify-content-start">
+                    <button type="button" class="btn cancel" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" id="saveSkills" class="btn changepass" data-bs-dismiss="modal" aria-label="Close">Save</button>
                 </div>
             </div>
         </div>
@@ -55,8 +101,15 @@
 
         <div class="dropdown button1">
             <ul class="navbar-nav">
-                <li class="nav-item upperButtons">
-                    <a class="nav-link" href="#">&nbsp;Stories</a>
+                <li class="nav-item dropdown upperButtons">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">&nbsp;Stories&nbsp;
+                        <img src="images/drop-down.png"></a>
+                    <ul class="dropdown-menu  posAbsolute" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
                 </li>
 
                 <li class="nav-item dropdown upperButtons">
@@ -123,7 +176,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                 id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                                aria-expanded="false" style="display: flex !important ;">
                                 <img src="images/user-img.png" class="userimage ">
                                 <span class="blocking uNameuImage"> Evan Donohue</span>
                                 <img src="images/drop-down.png" class="uNameuImage">
@@ -149,7 +202,6 @@
     <!-- edit profile -->
     <div class="container mt-5 ">
 
-
         <div class=" d-flex row ">
 
             <!-- sideimage -->
@@ -157,7 +209,7 @@
                 <div class="d-flex justify-content-center"><img src="images/user-img.png" alt=""></div>
                 <div class="EDchangepass d-flex justify-content-center mt-3">Evan Donohue</div>
                 <div class="EDchangepass d-flex justify-content-center mt-2"><a href="#" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">Change password</a></div>
+                        data-bs-target="#exampleModal1">Change password</a></div>
             </div>
 
 
@@ -281,20 +333,17 @@
                 </div>
                 <div class="EPmyskill mt-4">
                     <div class="EPmyskilltextarea">
-                        <ul>
-                            <li>Anthropology</li>
-                            <li>Archeology</li>
-                            <li>Astronomy</li>
-                            <li>Computer Science</li>
-                            <li>Environmental Science</li>
-                            <li>History</li>
-                        </ul>
+                        <select multiple="multiple" id="selectedSkills">
+                        </select>
                     </div>
+
+
                 </div>
 
                 <!-- footer button -->
                 <div class="EPaddskill mt-3">
-                    <button>Add skill</button>
+                    <button data-bs-toggle="modal" data-bs-target="#exampleModal2" id="addSkillButton">Add
+                        skill</button>
                 </div>
                 <div class="d-flex justify-content-end EPsave mt-3">
                     <button>Save</button>
@@ -314,12 +363,11 @@
 
     </div>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
@@ -330,7 +378,8 @@
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
 
-
+    <script src="js/EditProfile.js"></script>
+    <script src="js/home.js"></script>
 </body>
 
 </html>
