--- a/HTML/VolunteeringTimesheet.html
+++ b/HTML/VolunteeringTimesheet.html
@@ -21,6 +21,109 @@
 
 <body>
 
+    <!-- modal for volunteering hours -->
+    <div class="modal " id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Please input below Volunteering Hours</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body ">
+
+                    <div class="margin2">Mission</div>
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle EPddborder col" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="d-flex justify-content-between">
+                                <p>Faith Community Fellowship </p> <img src="images/drop-down.png" alt="">
+                            </span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="margin2">Date</div>
+                    <form action="POST">
+                        <input type="date" id="birthday" name="birthday" placeholder="Select Date" style="width: 100%;">
+                    </form>
+
+                    <div class="row margin2">
+                        <div class="col-6 textarea">Hours
+                            <input type="text" name="Hours" class="form-control " id="hours"
+                                aria-describedby="emailHelp" placeholder="Enter spent hours">
+                        </div>
+                        <div class="col-6 textarea">Minutes
+                            <input type="text" name="Minutes" class="form-control" id="minutes"
+                                aria-describedby="emailHelp" placeholder="Enter spent minutes">
+                        </div>
+                    </div>
+
+                    <div class="margin2">Message*</div>
+                    <textarea name="subject" id="subject" class="form-control textarea " aria-describedby="emailHelp"
+                        placeholder="Enter your message"></textarea>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn cancel" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn changepass" data-bs-dismiss="modal"
+                        aria-label="Close">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- modal for volunteering hours -->
+    <div class="modal " id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Please input below Volunteering goals</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body ">
+
+                    <div class="margin2">Mission</div>
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle EPddborder col" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="d-flex justify-content-between">
+                                <p>Plantation and Afforestation Programme</p> <img src="images/drop-down.png" alt="">
+                            </span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="margin2">Actions</div>
+                    <input type="text" name="Actions" class="form-control " id="hours" aria-describedby="emailHelp"
+                        placeholder="Enter actions">
+
+                    <div class="margin2">Date volunteered</div>
+                    <form action="POST">
+                        <input type="date" id="birthday" name="birthday" placeholder="Select Date" style="width: 100%;">
+                    </form>
+
+                    <div class="margin2">Message*</div>
+                    <textarea name="subject" id="subject" class="form-control textarea " aria-describedby="emailHelp"
+                        placeholder="Enter your message"></textarea>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn cancel" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn changepass" data-bs-dismiss="modal"
+                        aria-label="Close">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- upper nav side open bar -->
     <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none;" id="rightMenu">
         <button onclick="closeRightMenu()" class="w3-bar-item w3-button w3-large "><img src="images/left.png"></button>
@@ -129,6 +232,7 @@
     <div class="VTheading container"> Volunteering Timesheet</div>
     <div class="container grid-container">
         <div class="row">
+            <!-- Volunteering hours  -->
             <div class="col-12 col-xl-6 ">
                 <div class="card ">
                     <div class="title">Volunteering hours</div>
@@ -149,16 +253,18 @@
                                 <td>22/02/2022</td>
                                 <td>1h</td>
                                 <td>30min</td>
-                                <td><button> <img src="images/editing.png" alt=""></button></td>
+                                <td><button><img src="images/editing.png" alt="" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal1"></button></td>
                                 <td><button><img src="images/delete.png" alt=""></button></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+            <!-- volunteering goals  -->
             <div class="col-12 col-xl-6 ">
                 <div class="card ">
-                    <div class="title">Volunteering hours</div>
+                    <div class="title">Volunteering goals</div>
                     <table class="table table-borderless">
                         <thead>
                             <tr>
@@ -173,15 +279,17 @@
                             <tr>
                                 <td>Plantation program</td>
                                 <td>22/02/2022</td>
-                                <td>0</td>        
-                                <td><button> <img src="images/editing.png" alt=""></button></td>
+                                <td>0</td>
+                                <td><button><img src="images/editing.png" alt="" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal2  "></button></td>
                                 <td><button><img src="images/delete.png" alt=""></button></td>
                             </tr>
                             <tr>
                                 <td>Education Conservation</td>
                                 <td>22/02/2022</td>
                                 <td>1</td>
-                                <td><button> <img src="images/editing.png" alt=""></button></td>
+                                <td><button> <img src="images/editing.png" alt="" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal2"></button></td>
                                 <td><button><img src="images/delete.png" alt=""></button></td>
                             </tr>
                         </tbody>
@@ -191,10 +299,8 @@
         </div>
     </div>
 
-
-
     <!-- footer -->
-    <div class="EPfooterline "></div>
+    <div class="EPfooterline"></div>
     <div class="container EPprivacypolicy d-flex justify-content-start mt-3 gap-3">
         <div class="privacypolicy"><a href="#">Privacy policy</a></div>
         <div class="contactus"><a href="#">Cookie policy</a></div>
